html boilerplate and html markup done

--- a/index.html
+++ b/index.html
@@ -1,26 +1,45 @@
-Nely Santos
-
-About
-
-    I am an Intro to Programming Student at Code the Dream. I am expanding my technical skills by learning JavaScript, HTML, CSS, and Git. I have experience in UX/UI Design and Research, working on projects where I developed and learned about user research plans, affinity diagrams, storytelling, mapping user flows, prototyping, conducting usability testing, and prioritizing tasks with a 2x2 matrix. My hobbies include hiking, video games, and reading.
-
-Experience
-
-    Netflix UX/UI Design and Research Pathways Bootcamp
-    UX Research Report of Infrequent Watchers: Created a research plan and conducted interviews/surveys to understand what pain points users face when selecting content to watch and how to solve them.
-    Link: https://docs.google.com/presentation/d/1vHMRD3kxLn1bZMCjBpLYJcvWjznlcfxwtABmqiIei6w/edit?usp=sharing
-    Netflix Non-Member Homepage: Created a user research plan and conducted interviews to understand what aspects from the non-member homepage do users value most when making an informed descision about features, content, and plan options. 
-    Link: https://docs.google.com/presentation/d/1g13yk-FLYD0MHMgs0V3SniUImOuPM73zVFsSG0nu7hA/edit?usp=sharing
-
-    Girls Inc. Volunteer Development Intern
-    Managed the Linktree account for volunteer and intern onboarding information. Recorded inventory data of donated items from sponsors through spreadsheets. Assisted with event planning by creating flyers, surveys, and calandar agendas. Revised and edited the Volunteer Handbook for current information about tools, services, and resources. 
-
-    UCI GIS Analyst
-    Created map and data visual designs depicting urban spatial patterns in Orange County. Worked with US Census data to visualize urban inequalities. Learned about map design, GIS outputs, working with spatial data, file geodatabases, geoprocessing, digitizing, and geocoding. 
-    Link: https://sites.google.com/uci.edu/nelysantos/?usp=sharing
-
-Connect
-
-    email: nssantos2248@gmail.com
-    Linkedin: https://www.linkedin.com/in/nssantos25/
-    GitHub: https://github.com/nssamanta
+<!DOCTYPE html>
+    <head>
+        <title>Nely Santos - Main Page</title> 
+        <meta charset="UTF-8">
+        <meta name="description" content="Nely Santos's Portfolio ">
+        <meta name="author" content="Nely Santos">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+        <h1>Nely Santos</h1>
+        <section id="About">
+            <h2>About</h2>
+            <p> I am an Intro to Programming Student at Code the Dream. I am expanding my technical skills by learning JavaScript, HTML, CSS, and Git. I have experience in UX/UI Design and Research, working on projects where I developed and learned about user research plans, affinity diagrams, storytelling, mapping user flows, prototyping, conducting usability testing, and prioritizing tasks with a 2x2 matrix. My hobbies include hiking, video games, and reading.</p>
+        </section>
+        <section id="Experience">
+            <h2>Experience</h2>
+            <ul>
+                <li>
+                    Netflix UX/UI Design and Research Pathways Bootcamp
+                    UX Research Report of Infrequent Watchers: Created a research plan and conducted interviews/surveys to understand what pain points users face when selecting content to watch and how to solve them.
+                    Link: https://docs.google.com/presentation/d/1vHMRD3kxLn1bZMCjBpLYJcvWjznlcfxwtABmqiIei6w/edit?usp=sharing
+                    Netflix Non-Member Homepage: Created a user research plan and conducted interviews to understand what aspects from the non-member homepage do users value most when making an informed descision about features, content, and plan options. 
+                    Link: https://docs.google.com/presentation/d/1g13yk-FLYD0MHMgs0V3SniUImOuPM73zVFsSG0nu7hA/edit?usp=sharing
+                </li>
+                <li> 
+                    Girls Inc. Volunteer Development Intern
+                    Managed the Linktree account for volunteer and intern onboarding information. Recorded inventory data of donated items from sponsors through spreadsheets. Assisted with event planning by creating flyers, surveys, and calandar agendas. Revised and edited the Volunteer Handbook for current information about tools, services, and resources. 
+                </li>
+                <li>
+                    UCI GIS Analyst
+                    Created map and data visual designs depicting urban spatial patterns in Orange County. Worked with US Census data to visualize urban inequalities. Learned about map design, GIS outputs, working with spatial data, file geodatabases, geoprocessing, digitizing, and geocoding. 
+                    Link: https://sites.google.com/uci.edu/nelysantos/?usp=sharing
+                </li>
+            </ul>
+        </section>    
+        <section id="Connect">
+            <h2>Connect</h2>
+            <ul>
+                <li>email: nssantos2248@gmail.com</li>
+                <li><a href="https://github.com/nssamanta" target="_blank">My Github</a></li>
+                <li><a href="https://www.linkedin.com/in/nssantos25/" target="_blank">My LinkedIn</a></li>           
+            </ul> 
+        </section>
+    </body>
+</html>
