--- a/index.html
+++ b/index.html
@@ -5,41 +5,48 @@
         <meta name="description" content="Nely Santos's Portfolio ">
         <meta name="author" content="Nely Santos">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
         <h1>Nely Santos</h1>
-        <section id="About">
+        <section id="about">
             <h2>About</h2>
             <p> I am an Intro to Programming Student at Code the Dream. I am expanding my technical skills by learning JavaScript, HTML, CSS, and Git. I have experience in UX/UI Design and Research, working on projects where I developed and learned about user research plans, affinity diagrams, storytelling, mapping user flows, prototyping, conducting usability testing, and prioritizing tasks with a 2x2 matrix. My hobbies include hiking, video games, and reading.</p>
         </section>
-        <section id="Experience">
+        <section id="experience">
             <h2>Experience</h2>
             <ul>
-                <li>
-                    Netflix UX/UI Design and Research Pathways Bootcamp
-                    UX Research Report of Infrequent Watchers: Created a research plan and conducted interviews/surveys to understand what pain points users face when selecting content to watch and how to solve them.
-                    Link: https://docs.google.com/presentation/d/1vHMRD3kxLn1bZMCjBpLYJcvWjznlcfxwtABmqiIei6w/edit?usp=sharing
-                    Netflix Non-Member Homepage: Created a user research plan and conducted interviews to understand what aspects from the non-member homepage do users value most when making an informed descision about features, content, and plan options. 
-                    Link: https://docs.google.com/presentation/d/1g13yk-FLYD0MHMgs0V3SniUImOuPM73zVFsSG0nu7hA/edit?usp=sharing
+                <div><h4>Netflix UX/UI Design and Research Pathways Bootcamp</h4>
+                <li>    
+                    <a href="https://docs.google.com/presentation/d/1vHMRD3kxLn1bZMCjBpLYJcvWjznlcfxwtABmqiIei6w/edit?usp=sharing" target="_blank">Research Report of Infrequent Watchers</a> : Created a research plan and conducted interviews/surveys to understand what pain points users face when selecting content to watch and how to solve them.
                 </li>
-                <li> 
-                    Girls Inc. Volunteer Development Intern
+                <li>
+                    <a href="https://docs.google.com/presentation/d/1g13yk-FLYD0MHMgs0V3SniUImOuPM73zVFsSG0nu7hA/edit?usp=sharing" target="_blank">Netflix Non-Member Homepage</a>: Created a user research plan and conducted interviews to understand what aspects from the non-member homepage do users value most when making an informed descision about features, content, and plan options.
+                </li></div>
+                <div><h4>Girls Inc. Volunteer Development Intern</h4>
+                <li>
                     Managed the Linktree account for volunteer and intern onboarding information. Recorded inventory data of donated items from sponsors through spreadsheets. Assisted with event planning by creating flyers, surveys, and calandar agendas. Revised and edited the Volunteer Handbook for current information about tools, services, and resources. 
-                </li>
-                <li>
-                    UCI GIS Analyst
-                    Created map and data visual designs depicting urban spatial patterns in Orange County. Worked with US Census data to visualize urban inequalities. Learned about map design, GIS outputs, working with spatial data, file geodatabases, geoprocessing, digitizing, and geocoding. 
-                    Link: https://sites.google.com/uci.edu/nelysantos/?usp=sharing
-                </li>
+                </li></div>
+                <div><h4>UCI GIS Analyst</h4>
+                <li><a href="https://sites.google.com/uci.edu/nelysantos/?usp=sharing" target="_blank">GIS Portfolio</a>: Created map and data visual designs depicting urban spatial patterns in Orange County. Worked with US Census data to visualize urban inequalities. Learned about map design, GIS outputs, working with spatial data, file geodatabases, geoprocessing, digitizing, and geocoding.
+                </li></div>
             </ul>
         </section>    
-        <section id="Connect">
+        <section id="connect">
             <h2>Connect</h2>
             <ul>
-                <li>email: nssantos2248@gmail.com</li>
-                <li><a href="https://github.com/nssamanta" target="_blank">My Github</a></li>
-                <li><a href="https://www.linkedin.com/in/nssantos25/" target="_blank">My LinkedIn</a></li>           
+                <li><a href="https://github.com/nssamanta" target="_blank">
+                    <img id="github" src="githublogo.png">
+                </a></li>
+                <li><a href="https://www.linkedin.com/in/nssantos25/" target="_blank">
+                    <img id="linkedin" src="linkedinlogo.png" width="150px">
+                </a></li>   
             </ul> 
+                <p>email: nelysantossamanta@gmail.com</p>  
+            
         </section>
     </body>
 </html>
