revised styling added

--- a/index.html
+++ b/index.html
@@ -1,52 +1,91 @@
 <!DOCTYPE html>
-    <head>
-        <title>Nely Santos - Main Page</title> 
-        <meta charset="UTF-8">
-        <meta name="description" content="Nely Santos's Portfolio ">
-        <meta name="author" content="Nely Santos">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/index.css">
-    </head>
-    <body>
-        <h1>Nely Santos</h1>
-        <section id="about">
-            <h2>About</h2>
-            <p> I am an Intro to Programming Student at Code the Dream. I am expanding my technical skills by learning JavaScript, HTML, CSS, and Git. I have experience in UX/UI Design and Research, working on projects where I developed and learned about user research plans, affinity diagrams, storytelling, mapping user flows, prototyping, conducting usability testing, and prioritizing tasks with a 2x2 matrix. My hobbies include hiking, video games, and reading.</p>
-        </section>
-        <section id="experience">
-            <h2>Experience</h2>
-            <ul>
-                <div><h4>Netflix UX/UI Design and Research Pathways Bootcamp</h4>
-                <li>    
-                    <a href="https://docs.google.com/presentation/d/1vHMRD3kxLn1bZMCjBpLYJcvWjznlcfxwtABmqiIei6w/edit?usp=sharing" target="_blank">Research Report of Infrequent Watchers</a> : Created a research plan and conducted interviews/surveys to understand what pain points users face when selecting content to watch and how to solve them.
-                </li>
-                <li>
-                    <a href="https://docs.google.com/presentation/d/1g13yk-FLYD0MHMgs0V3SniUImOuPM73zVFsSG0nu7hA/edit?usp=sharing" target="_blank">Netflix Non-Member Homepage</a>: Created a user research plan and conducted interviews to understand what aspects from the non-member homepage do users value most when making an informed descision about features, content, and plan options.
-                </li></div>
-                <div><h4>Girls Inc. Volunteer Development Intern</h4>
-                <li>
-                    Managed the Linktree account for volunteer and intern onboarding information. Recorded inventory data of donated items from sponsors through spreadsheets. Assisted with event planning by creating flyers, surveys, and calandar agendas. Revised and edited the Volunteer Handbook for current information about tools, services, and resources. 
-                </li></div>
-                <div><h4>UCI GIS Analyst</h4>
-                <li><a href="https://sites.google.com/uci.edu/nelysantos/?usp=sharing" target="_blank">GIS Portfolio</a>: Created map and data visual designs depicting urban spatial patterns in Orange County. Worked with US Census data to visualize urban inequalities. Learned about map design, GIS outputs, working with spatial data, file geodatabases, geoprocessing, digitizing, and geocoding.
-                </li></div>
-            </ul>
-        </section>    
-        <section id="connect">
-            <h2>Connect</h2>
-            <ul>
-                <li><a href="https://github.com/nssamanta" target="_blank">
-                    <img id="github" src="githublogo.png">
-                </a></li>
-                <li><a href="https://www.linkedin.com/in/nssantos25/" target="_blank">
-                    <img id="linkedin" src="linkedinlogo.png" width="150px">
-                </a></li>   
-            </ul> 
-                <p>email: nelysantossamanta@gmail.com</p>  
-            
-        </section>
-    </body>
+<html lang="en-US">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Nely Portfolio</title>
+    <meta name="description" content="Nely Santos's Portfolio" />
+    <meta name="author" content="Nely Santos" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
+  <body>
+    <h1>Nely Santos</h1>
+    <section id="about">
+      <h2>About</h2>
+      <p>
+        I am a life-long learner looking to expand my skills in front-end
+        web development. I am currently a student at Code the Dream where I
+        am practicing my skills in JavaScript, HTML, CSS, and Git. I have
+        experience in the non-profit sector helping onboard volunteers to help
+        at Girls Inc. by managing the Linktree website with up-to-date
+        information. I also have experience in UX/UI Design and Research
+        collaborating on projects where we developed proto-personas, research
+        plans, affinity diagrams, storyboards, user flows, prototypes, conducted
+        usability testing, and prioritized tasks with a 2x2 matrix. In my free
+        time, I enjoy playing video games, hiking, and reading.
+      </p>
+    </section>
+    <section id="experience">
+      <h2>Experience</h2>
+      <ul>
+        <li>
+          <h3>Netflix UX/UI Design and Research Pathways Bootcamp</h3>
+          Developed a Research Report on Infrequent Watchers to understand what
+          problems users face when selecting content to watch. Conducted user
+          interviews and surveys for data collection. Analyzed data by utilizing
+          affinity diagrams for key findings and future recommendations.
+          Developed a User Research Plan to understand the value that the
+          Netflix Non-Member Homepage provides to users who are looking to
+          purchase a plan. Conducted qualitative research through user
+          interviews to gain insight into problem definition. Designed
+          prototypes and user flows through Figma for usability testing and
+          iteration.
+        </li>
+        <li>
+          <h3>Girls Inc. Volunteer Development Intern</h3>
+          Managed the Linktree account for volunteer and intern onboarding
+          information. Recorded inventory data of donated items from sponsors
+          through spreadsheets. Assisted with event planning by creating flyers,
+          surveys, and calendar agendas. Revised and edited the Volunteer
+          Handbook for current information about tools, services, and resources.
+        </li>
+        <li>
+          <h3>UCI GIS Analyst</h3>
+          Collaborated with the Santa Ana Building Healthier Communities
+          organization to create map and data visual designs depicting urban
+          spatial patterns in Orange County, CA. Worked with US Census data to
+          visualize urban inequalities in Orange County related to age, gender,
+          education, crime, health, and income. Learned about map design, GIS
+          outputs, working with spatial data, file geodatabases, geoprocessing,
+          digitizing, and geocoding.
+        </li>
+      </ul>
+    </section>
+    <section id="connect">
+      <h2>Connect</h2>
+      <ul>
+        <li>
+          <a href="https://github.com/nssamanta" target="_blank"
+            ><img id="github" src="githublogo.png" alt="Nely's Github Profile"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/nssantos25/" target="_blank"
+            ><img
+              id="linkedin"
+              src="linkedinlogo.png"
+              width="150px"
+              alt="Nely's LinkedIn Profile"
+          /></a>
+        </li>
+      </ul>
+      <p>E-mail: nelysantossamanta@gmail.com</p>
+    </section>
+  </body>
 </html>
