formatted styles added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#connect">Connect</a></li>
+      </ul>
+    </nav>
     <h1>Nely Santos</h1>
     <section id="about">
       <h2>About</h2>
@@ -35,8 +44,9 @@
       <h2>Experience</h2>
       <ul>
         <li>
-          <h3>Netflix UX/UI Design and Research Pathways Bootcamp</h3>
-          Developed a Research Report on Infrequent Watchers to understand what
+          <div class="job-header"><h3 class="job-title">Nelflix User Experience Designer</h3>
+          <span class="job-dates">Jan 2022 - Dec 2022</span></div>
+          <p>Developed a Research Report on Infrequent Watchers to understand what
           problems users face when selecting content to watch. Conducted user
           interviews and surveys for data collection. Analyzed data by utilizing
           affinity diagrams for key findings and future recommendations.
@@ -45,27 +55,35 @@
           purchase a plan. Conducted qualitative research through user
           interviews to gain insight into problem definition. Designed
           prototypes and user flows through Figma for usability testing and
-          iteration.
+          iteration.</p>
         </li>
         <li>
-          <h3>Girls Inc. Volunteer Development Intern</h3>
-          Managed the Linktree account for volunteer and intern onboarding
+          <div class="job-header"><h3 class="job-title">Girls Inc. Volunteer Development Intern</h3>
+          <span class="job-dates">Jan 2022 - Dec 2022</span></div>
+          <p>Managed the Linktree account for volunteer and intern onboarding
           information. Recorded inventory data of donated items from sponsors
           through spreadsheets. Assisted with event planning by creating flyers,
           surveys, and calendar agendas. Revised and edited the Volunteer
-          Handbook for current information about tools, services, and resources.
+          Handbook for current information about tools, services, and resources.</p>
         </li>
         <li>
-          <h3>UCI GIS Analyst</h3>
-          Collaborated with the Santa Ana Building Healthier Communities
+          <div class="job-header"><h3 class="job-title">UCI GIS Analyst</h3>
+          <span class="job-dates">Mar 2019 - Jun 2019</span></div>
+          <p>Collaborated with the Santa Ana Building Healthier Communities
           organization to create map and data visual designs depicting urban
           spatial patterns in Orange County, CA. Worked with US Census data to
           visualize urban inequalities in Orange County related to age, gender,
           education, crime, health, and income. Learned about map design, GIS
           outputs, working with spatial data, file geodatabases, geoprocessing,
-          digitizing, and geocoding.
+          digitizing, and geocoding.</p>
         </li>
       </ul>
+    </section>
+    <section id="skills">
+      <h2>Skills</h2>
+    </section>
+    <section id="projects">
+      <h2>Projects</h2>
     </section>
     <section id="connect">
       <h2>Connect</h2>
@@ -85,7 +103,7 @@
           /></a>
         </li>
       </ul>
-      <p>E-mail: nelysantossamanta@gmail.com</p>
+      <p><a href="mailto:nelysantossamanta@gmail.com">E-mail: nelysantossamanta@gmail.com</a></p>
     </section>
   </body>
 </html>
