--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h2>Experience</h2>
       <ul>
         <li>
-          <div class="job-header"><h3 class="job-title">Nelflix User Experience Designer</h3>
+          <div class="job-header"><h3 class="job-title">Netflix User Experience Designer</h3>
           <span class="job-dates">Jan 2022 - Dec 2022</span></div>
           <p>Developed a Research Report on Infrequent Watchers to understand what
           problems users face when selecting content to watch. Conducted user
