--- a/index.html
+++ b/index.html
@@ -79,11 +79,14 @@
         </li>
       </ul>
     </section>
-    <section id="skills">
-      <h2>Skills</h2>
-    </section>
     <section id="projects">
       <h2>Projects</h2>
+    </section>
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        
+      </ul>
     </section>
     <section id="connect">
       <h2>Connect</h2>
@@ -106,4 +109,5 @@
       <p><a href="mailto:nelysantossamanta@gmail.com">E-mail: nelysantossamanta@gmail.com</a></p>
     </section>
   </body>
+  <script src="js/index.js"></script>
 </html>
